# ml-template

./: MANIFEST.in  pyproject.toml  setup.py  tox.toml
_model/: __init__.py  config.yml  pipeline.py  predict.py
_model/config/: core.py
_model/processing/: data_manager.py  validation.py
tests/: conftest.py  test_features.py  test_prediction.py
